--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,76 +2,49 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_IMAGE = "awaismalak/flask-devops-app"
-        DOCKER_CREDENTIALS_ID = "docker-hub-credentials"
+        IMAGE_NAME = "awaismalak/flask-devops-app"
+        DOCKER_CREDS = credentials('dockerhub-creds')
     }
 
     stages {
-        stage('Checkout SCM') {
+
+        stage('Checkout') {
             steps {
-                echo "Checking out code from Git..."
-                checkout scm
+                git 'https://github.com/Malikawais108/aws-devops-cicd-project.git'
             }
         }
 
-        stage('Build Docker Image') {
+        stage('Build Image') {
             steps {
-                echo "Building Docker image ${DOCKER_IMAGE}..."
-                sh "docker build -t ${DOCKER_IMAGE}:${BUILD_NUMBER} -f docker/Dockerfile ."
+                sh "docker build -t $IMAGE_NAME:${BUILD_NUMBER} ."
             }
         }
 
-        stage('Test Container') {
+        stage('DockerHub Login') {
             steps {
-                script {
-                    def TEST_PORT = sh(script: "shuf -i 5001-5999 -n 1", returnStdout: true).trim()
-                    env.TEST_PORT = TEST_PORT
-                    echo "Running test container on port ${TEST_PORT}"
-                    sh "docker rm -f test-flask-devops-app || true"
-                    sh "docker run -d --name test-flask-devops-app -p ${TEST_PORT}:5000 ${DOCKER_IMAGE}:${BUILD_NUMBER}"
-                }
+                sh '''
+                echo $DOCKER_CREDS_PSW | docker login -u $DOCKER_CREDS_USR --password-stdin
+                '''
             }
         }
 
-        stage('Docker Login & Push') {
+        stage('Push Image') {
             steps {
-                withCredentials([usernamePassword(
-                    credentialsId: "${DOCKER_CREDENTIALS_ID}", 
-                    usernameVariable: 'DOCKER_USER', 
-                    passwordVariable: 'DOCKER_PASS')]) {
-                    
-                    echo "Logging in to Docker Hub..."
-                    sh "echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin"
-                    echo "Pushing Docker image ${DOCKER_IMAGE}:${BUILD_NUMBER}..."
-                    sh "docker push ${DOCKER_IMAGE}:${BUILD_NUMBER}"
-                }
+                sh "docker push $IMAGE_NAME:${BUILD_NUMBER}"
             }
         }
 
-        stage('Deploy to Kubernetes') {
+        stage('Update Kubernetes Manifest') {
             steps {
-                echo "Deploying to Kubernetes..."
-                sh "sed -i 's|image: ${DOCKER_IMAGE}:.*|image: ${DOCKER_IMAGE}:${BUILD_NUMBER}|' kubernetes/deployment.yaml"
-                sh "kubectl apply -f kubernetes/deployment.yaml"
-                sh "kubectl apply -f kubernetes/service.yaml"
-                sh "kubectl rollout status deployment/flask-app"
-
-                echo "Applying Ingress and HPA..."
-                sh "kubectl apply -f kubernetes/ingress.yaml"
-                sh "kubectl apply -f kubernetes/hpa.yaml"
+                sh '''
+                sed -i "s|image: .*|image: $IMAGE_NAME:${BUILD_NUMBER}|g" kubernetes/deployment.yaml
+                git config user.email "ci@jenkins.com"
+                git config user.name "Jenkins CI"
+                git add kubernetes/deployment.yaml
+                git commit -m "Updated image to version ${BUILD_NUMBER}"
+                git push origin main
+                '''
             }
         }
-
-        stage('Cleanup Test Container') {
-            steps {
-                echo "Cleaning up test container..."
-                sh "docker rm -f test-flask-devops-app || true"
-            }
-        }
-    }
-
-    post {
-        always { echo "Pipeline finished!" }
-        failure { echo "Pipeline failed! Check logs." }
     }
 }
