--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,40 +10,43 @@ pipeline {
 
         stage('Checkout') {
             steps {
-                git branch: 'main', url: 'https://github.com/Malikawais108/aws-devops-cicd-project.git'
+                git 'https://github.com/Malikawais108/aws-devops-cicd-project.git'
             }
         }
 
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build("${IMAGE_NAME}:${env.BUILD_NUMBER}")
+                    // Specify the Docker build context where Dockerfile exists
+                    docker.build("${IMAGE_NAME}:${env.BUILD_NUMBER}", "docker/")
                 }
             }
         }
 
-        stage('DockerHub Login & Push') {
+        stage('DockerHub Login') {
             steps {
-                script {
-                    docker.withRegistry('https://index.docker.io/v1/', 'docker-hub-credentials') {
-                        docker.image("${IMAGE_NAME}:${env.BUILD_NUMBER}").push()
-                    }
-                }
+                sh '''
+                echo $DOCKER_CREDS_PSW | docker login -u $DOCKER_CREDS_USR --password-stdin
+                '''
+            }
+        }
+
+        stage('Push Image') {
+            steps {
+                sh "docker push $IMAGE_NAME:${BUILD_NUMBER}"
             }
         }
 
         stage('Update Kubernetes Deployment') {
             steps {
-                script {
-                    sh """
-                        sed -i "s|image: .*|image: ${IMAGE_NAME}:${BUILD_NUMBER}|g" kubernetes/deployment.yaml
-                        git config user.email "ci@jenkins.com"
-                        git config user.name "Jenkins CI"
-                        git add kubernetes/deployment.yaml
-                        git commit -m "Updated image to version ${BUILD_NUMBER}" || echo "No changes to commit"
-                        git push origin main
-                    """
-                }
+                sh '''
+                sed -i "s|image: .*|image: $IMAGE_NAME:${BUILD_NUMBER}|g" kubernetes/deployment.yaml
+                git config user.email "ci@jenkins.com"
+                git config user.name "Jenkins CI"
+                git add kubernetes/deployment.yaml
+                git commit -m "Updated image to version ${BUILD_NUMBER}"
+                git push origin main
+                '''
             }
         }
     }
