--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -4,49 +4,63 @@ pipeline {
     environment {
         IMAGE_NAME = "awaismalak/flask-devops-app"
         DOCKER_CREDS = credentials('docker-hub-credentials')
+        GIT_REPO = "https://github.com/Malikawais108/aws-devops-cicd-project.git"
+        BRANCH = "main"
     }
 
-    stage('Checkout') {
-    steps {
-        git branch: 'main', url: 'https://github.com/Malikawais108/aws-devops-cicd-project.git'
-    }
-}
+    stages {
 
+        stage('Checkout Code') {
+            steps {
+                git branch: "${BRANCH}", url: "${GIT_REPO}"
+            }
+        }
 
         stage('Build Docker Image') {
             steps {
-                script {
-                    // Specify the Docker build context where Dockerfile exists
-                    docker.build("${IMAGE_NAME}:${env.BUILD_NUMBER}", "docker/")
-                }
+                sh """
+                docker build -t ${IMAGE_NAME}:${BUILD_NUMBER} -f docker/Dockerfile .
+                """
             }
         }
 
         stage('DockerHub Login') {
             steps {
-                sh '''
-                echo $DOCKER_CREDS_PSW | docker login -u $DOCKER_CREDS_USR --password-stdin
-                '''
+                sh """
+                echo ${DOCKER_CREDS_PSW} | docker login -u ${DOCKER_CREDS_USR} --password-stdin
+                """
             }
         }
 
-        stage('Push Image') {
+        stage('Push Image to DockerHub') {
             steps {
-                sh "docker push $IMAGE_NAME:${BUILD_NUMBER}"
+                sh """
+                docker push ${IMAGE_NAME}:${BUILD_NUMBER}
+                """
             }
         }
 
         stage('Update Kubernetes Deployment') {
             steps {
-                sh '''
-                sed -i "s|image: .*|image: $IMAGE_NAME:${BUILD_NUMBER}|g" kubernetes/deployment.yaml
+                sh """
+                sed -i "s|image: .*|image: ${IMAGE_NAME}:${BUILD_NUMBER}|g" kubernetes/deployment.yaml
+
                 git config user.email "ci@jenkins.com"
                 git config user.name "Jenkins CI"
                 git add kubernetes/deployment.yaml
-                git commit -m "Updated image to version ${BUILD_NUMBER}"
-                git push origin main
-                '''
+                git commit -m "Update image tag to ${BUILD_NUMBER}"
+                git push origin ${BRANCH}
+                """
             }
+        }
+    }
+
+    post {
+        success {
+            echo "CI Pipeline Completed Successfully!"
+        }
+        failure {
+            echo "Pipeline Failed!"
         }
     }
 }
